Fix undeclared identifier issue due to clashes in soft link headers https://bugs.webkit.org/show_bug.cgi?id=216412

Reviewed by Geoffrey Garen.

Source/WebCore/PAL:

r266898 broke builds on certain SDKs. The reason for this is that it includes
MediaToolbox/FigPhoto.h, which transitively includes CoreMedia/CMTimePrivate.h. The latter
header has a bunch of inline code in certain SDKs which conflicts with the
CoreMediaSoftLink.h header. For instance, CoreMediaSoftLink.h redefines CMTimeCompare to
softLink_CoreMedia_CMTimeCompare, which messes up the inline code in the CMTimePrivate.h
header that references CMTimeCompare.

For now, we just avoid including FigPhoto.h altogether and use a constant. We'll clean this
up once we start weak linking rather than soft linking CoreMedia and MediaToolbox (216388).

* pal/cocoa/MediaToolboxSoftLink.cpp:
* pal/cocoa/MediaToolboxSoftLink.h:
* pal/spi/cocoa/MediaToolboxSPI.h:

Source/WebKit:

Use the workaround constant kPALFigPhotoContainerFormat_JFIF instead of the enum value
kFigPhotoContainerFormat_JFIF.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/229245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266932 268f45cc-cd09-0410-ab3c-d52691b4dbfc